# bp-designs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: README.md  settings.json  settings.local.json
.claude/commands/: explain.md  lint.md  refactor.md  setup.md  test.md
.claude/hooks/: tool-result.sh  tool-use.sh  user-prompt-submit.sh
docs/: ARCHITECTURE_GALLERY.md  COMPOSITION_PLAN.md  ROADMAP.md  api.md  design_goals.md
docs/architecture/: change_requirements.md  current_architecture.md  flow_fields_alignment.md  future_direction.md  implementation_plan_flow_fields.md  plan_implications.md  recommendations.md
docs/design/: flow_fields.md
docs/exploration/: 2025-01-23_initial-params.md  2025-01-29.md  2026-01-11_network-refinement.md  2026-01-11_organic-rendering-plan.md  2026-01-24_fix-semantic-mapping.md  2026-01-24_refinement-plan.md  LEARNINGS.md  README.md  space_col_artistic_directions.md  space_col_refactor_spec.md
docs/features/: composition_spec.md
docs/plans/: 2026-03-29-flow-field-improvements.md  fix_flow_joining.md  refactor_flow_generator.md
docs/resources/: RESOURCES.md  algorithms.md
gallery/: app.js  index.html  styles.css
notebooks/: 01_prototype.ipynb
scripts/: analyze_topology.py  create_experiment_summary.py  smoke_test.py  start_vector_db.sh  test_composite_render.py
scripts/experiments/: README.md  composition_examples.py  (+4 more)
tests/: __init__.py  test_color.py  test_experiment_runner.py  test_fields.py  test_flow_generator.py  test_flow_improvements.py  test_flow_joining.py  test_flow_strategies.py  test_package.py  test_refinement.py  test_space_col_flow.py  test_space_colonization.py  test_thickness_unified.py  test_voronoi.py
(+84 files in other folders)
