[tool.poetry]
name = "bp-designs"
version = "0.1.0"
description = "Algorithmic pattern generation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bp_designs", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.3.5"
numba = "^0.62.1"
scipy = "^1.16.3"
svgwrite = "^1.4.3"
einops = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
ruff = "^0.14.7"
mypy = "^1.19.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.7"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration - fast Python linter (replaces flake8, isort, etc.)
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py


[tool.ruff.lint.pydocstyle]
# Enable docstring checking
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# MyPy configuration - static type checker
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
